// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderObligationCard > рендерит карточку с источником и обязательными пометками 1`] = `
{
  "automated": true,
  "sourceUrls": [
    "https://pravo.gov.ru/",
  ],
  "text": "📋 Обязанность · МОДЕЛЬНЫЕ ДАННЫЕ
Передавать сведения о маркированной воде

Статус: Применяется
Почему: Основной ОКВЭД начинается с 56
Кратко: Фиксировать выбытие упакованной воды через кассу.
Срок: при каждой продаже
Действует с: 2026-09-01
Проверено: 2026-09-25T09:00:00Z

Первоисточник:
• Модельный нормативный акт № 1, п. 5 — https://pravo.gov.ru/

ℹ️ Текст сформирован автоматически. Сверяйтесь с первоисточником.
🧪 Модельные данные — не результат реальной интеграции.",
}
`;

exports[`renderRequirementDelta > рендерит изменение статуса без модельной пометки для реального источника 1`] = `
{
  "automated": true,
  "sourceUrls": [
    "https://pravo.gov.ru/",
  ],
  "text": "🔔 Изменение: обязанность
Передавать сведения о маркированной воде

Изменился статус требования
Было: Недостаточно данных
Стало: Применяется
Зафиксировано: 2026-09-25T10:00:00Z

Первоисточник:
• Модельный нормативный акт № 1, п. 5 — https://pravo.gov.ru/

ℹ️ Текст сформирован автоматически. Сверяйтесь с первоисточником.",
}
`;

exports[`renderRequirementDelta > рендерит ранний сигнал как требующий проверки 1`] = `
{
  "automated": true,
  "sourceUrls": [
    "https://pravo.gov.ru/",
  ],
  "text": "🔔 Изменение: обязанность · МОДЕЛЬНЫЕ ДАННЫЕ
Передавать сведения о маркированной воде

Появился ранний сигнал об изменении — его нужно проверить
Стало: Требуется проверка

Первоисточник:
• Модельный нормативный акт № 1, п. 5 — https://pravo.gov.ru/

ℹ️ Текст сформирован автоматически. Сверяйтесь с первоисточником.
🧪 Модельные данные — не результат реальной интеграции.",
}
`;
